css/style.css
:root {
  /* Fonts */
  --ff-mono: 'Roboto Mono', monospace;
  --ff-body: 'Zen Kaku Gothic Antique', sans-serif;
  --fw-bold: 700;
  --fw-regular: 400;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  display: grid;
  place-items: center;
  min-height: 100vh;
  font-family: var(--ff-body);
  background-color: #eef2f7;
}

.password-container {
  width: 100%;
}

/* Prevent 'sticky hover' on touch devices */
@media (hover: hover) and (pointer: fine) {
  #password-output:hover {
    transition: background-color 0.15s ease-in;
    background-color: #f9f1f1;
  }
}

#password-output {
  display: grid;
  place-items: center;
  font-family: var(--ff-mono);
  font-size: 1em;
  font-weight: var(--fw-regular);
  border: 1px solid black;
  padding: 0 1em;
  border-radius: 5px;
  margin: 1em 0;
  word-break: break-all;
  height: 5rem;
  cursor: pointer;
}

@media (min-width: 420px) {
  #password-output {
    height: 4rem;
  }
}

.copy-action {
  transition: background-color 0.25s ease-in-out;
  background-color: #f9f1f1;
  border: none;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: end;
  width: 90%;
  max-width: 500px;
  min-width: 337px;
  margin: 0 auto;
  padding: 1rem;
  border-radius: 10px;
  background-color: #fff;
  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12);
}

.heading {
  font-weight: var(--fw-bold);
}

#main-form {
  display: grid;
  grid-template-columns: repeat(2, auto);
  gap: 1rem;
}

.length-input {
  display: flex;
  align-items: center;
}

#length-range {
  margin-left: 1rem;
}

#length-output {
  font-weight: var(--fw-bold);
  width: 1.5rem;
}

small {
  margin-top: 1rem;
  color: #a9a9a9;
  font-weight: var(--fw-bold);
  letter-spacing: 1.5px;
  text-transform: uppercase;
  text-align: center;
}

footer {
  align-self: end;
  margin-bottom: 1em;
}

